# starkpack-winterfell

./: .gitignore  LICENSE  README.md
winterfell/: Cargo.toml  dhat-heap.json
winterfell/src/: bench_proof_times.sh  lib.rs  main.rs  output.txt  ram_usage.sh
winterfell/src/proof_times_100columns/: output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt
winterfell/src/proof_times_10columns/: output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt
winterfell/src/proof_times_1column/: output_0.txt  output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
winterfell/src/proof_times_275columns/: output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt
winterfell/src/prover_times_decomposed_splitting/: output.txt  output_0.txt  output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
winterfell/src/ram_usage_100columns/: dhat-heap_0.json  dhat-heap_1.json  dhat-heap_2.json  dhat-heap_3.json  dhat-heap_4.json  dhat-heap_5.json  dhat-heap_6.json  dhat-heap_7.json
winterfell/src/ram_usage_10columns/: dhat-heap_0.json  dhat-heap_1.json  dhat-heap_2.json  dhat-heap_3.json  dhat-heap_4.json  (+3 more)
(+5441 files in other folders)
