[package]
name = "winterfell"
version = "0.6.4"
description = "Winterfell STARK prover and verifier"
authors = ["winterfell contributors"]
readme = "../README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winterfell/0.6.4"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "zkp", "stark", "prover", "verifier"]
edition = "2021"
rust-version = "1.67"

[lib]
bench = false

[features]
concurrent = ["prover/concurrent", "std"]
default = ["std"]
std = ["prover/std", "verifier/std"]
dhat-heap = []

[dependencies]
prover = { version = "0.6.1", path = "../prover", package = "winter-prover", default-features = false }
verifier = { version = "0.6.1", path = "../verifier", package = "winter-verifier", default-features = false }
dhat = "0.3.2"

[profile.release]
debug = 1

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
